Added elasticsearch client and test. Elasticsearch status wired into the /health endpoint. Config values, including the elasticsearch hosts, may be specified via environment variables. Using elastic4s-http for the elasticsearch client. Using testcontainers-scala for the elasticsearch client tests. Includes workaround for docker-java issue related to reading macOS configs.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -13,4 +13,14 @@ clio {
     port: 8080
     shutdown-timeout: 60s
   }
+
+  elasticsearch {
+    http-hosts: [
+      {
+        hostname: localhost
+        port: 9200
+        scheme: http
+      }
+    ]
+  }
 }
