Refactored server startup. A new ServerStatusDAO tracks the server status from NotStarted to Shutdown. Clio waits for a configurable list of elasticsearch statuses before listening on the http server. If the server fails to contact elasticsearch, retries a number of times. When retries fail, the program exits.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -22,5 +22,10 @@ clio {
         scheme: http
       }
     ]
+    readiness {
+      colors: ["green", "yellow"]
+      retries: 6
+      patience: 10s
+    }
   }
 }
