Integration testing index creation. Elasticsearch host passed to python script. Removed separated subnets that were only allowing the python to talk to clio, and not ES directly. More debugging info when the python tests go wrong.

--- a/src/test/resources/cliointegrationtest/docker-compose.yml
+++ b/src/test/resources/cliointegrationtest/docker-compose.yml
@@ -4,19 +4,15 @@ services:
   pytest:
     build:
       context: ./
-    networks:
-      - clionet
     environment:
       CLIO_HTTP_HOST: clio
+      ELASTICSEARCH_HTTP_HOST: elasticsearch1
     volumes:
       - ./clio_test.py:/cliointegrationtest/clio_test.py:ro
     command:
       - /cliointegrationtest/clio_test.py
   clio:
     image: broadinstitute/clio:${CLIO_DOCKER_TAG}
-    networks:
-      - clionet
-      - esnet
     environment:
       clio.elasticsearch.http-hosts.0.hostname: elasticsearch1
   elasticsearch1:
@@ -25,24 +21,14 @@ services:
       service: elasticsearch
     volumes:
       - esdata1:/usr/share/elasticsearch/data
-    networks:
-      - esnet
   elasticsearch2:
     extends:
       file: elasticsearch-compose.yml
       service: elasticsearch
     volumes:
       - esdata2:/usr/share/elasticsearch/data
-    networks:
-      - esnet
     environment:
         discovery.zen.ping.unicast.hosts: elasticsearch1
-
-networks:
-  clionet:
-    driver: bridge
-  esnet:
-    driver: bridge
 
 volumes:
   esdata1:
