--- a/src/test/resources/cliointegrationtest/Dockerfile
+++ b/src/test/resources/cliointegrationtest/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR /app
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["pytest", "-s"]
+ENTRYPOINT ["pytest", "-vv", "-s"]
