--- a/project/build.properties
+++ b/project/build.properties
@@ -1,2 +1,3 @@
 # Set the sbt version used by the project. scala version set in build.sbt.
+# suppress inspection "UnusedProperty"
 sbt.version=0.13.15
