Split into a multiproject build. Moved python docker image build from docker-compose to sbt-docker. Docker images for tests are now generated resources instead of managed. Fixed typo in "dockerComposeEnvironement".

--- a/clio-integration-test/src/test/resources/docker-compose/docker-compose.yml
+++ b/clio-integration-test/src/test/resources/docker-compose/docker-compose.yml
@@ -1,20 +1,15 @@
 version: '2'
 
 services:
-  pytest:
-    build:
-      context: ./
+  clio-integration-test:
+    image: broadinstitute/clio-integration-test:${CLIO_DOCKER_TAG}
     environment:
-      CLIO_HTTP_HOST: clio
+      CLIO_HTTP_HOST: clio-server
       ELASTICSEARCH_HTTP_HOST: elasticsearch1
-    volumes:
-      - ./clio_test.py:/cliointegrationtest/clio_test.py:ro
-    command:
-      - /cliointegrationtest/clio_test.py
-  clio:
-    image: broadinstitute/clio:${CLIO_DOCKER_TAG}
+  clio-server:
+    image: broadinstitute/clio-server:${CLIO_DOCKER_TAG}
     environment:
-      clio.elasticsearch.http-hosts.0.hostname: elasticsearch1
+      clio.server.elasticsearch.http-hosts.0.hostname: elasticsearch1
   elasticsearch1:
     extends:
       file: elasticsearch-compose.yml
