--- a/clio-server/src/main/resources/reference.conf
+++ b/clio-server/src/main/resources/reference.conf
@@ -1,13 +1,13 @@
-##############################
-# Clio Reference Config File #
-##############################
+#####################################
+# Clio Server Reference Config File #
+#####################################
 
 # This is the reference config file that contains all the default settings.
 # Make your edits/overrides in your application.conf.
 
-include "clio-version"
+include "clio-server-version"
 
-clio {
+clio.server {
   http-server {
     interface: 0.0.0.0
     port: 8080
