Fix integration test configuration.

--- a/clio-integration-test/src/test/resources/docker-compose/docker-compose.yml
+++ b/clio-integration-test/src/test/resources/docker-compose/docker-compose.yml
@@ -9,7 +9,7 @@ services:
   clio-server:
     image: broadinstitute/clio-server:${CLIO_DOCKER_TAG}
     environment:
-      clio.server.elasticsearch.http-hosts.0.hostname: elasticsearch1
+      JAVA_OPTS: -Dclio.server.elasticsearch.http-hosts.0.hostname=elasticsearch1
   elasticsearch1:
     extends:
       file: elasticsearch-compose.yml
