--- a/clio-integration-test/src/test/resources/docker-compose/docker-compose-jenkins.yml
+++ b/clio-integration-test/src/test/resources/docker-compose/docker-compose-jenkins.yml
@@ -9,6 +9,6 @@ services:
   clio-server:
     image: broadinstitute/clio-server:${CLIO_DOCKER_TAG}
     environment:
-      clio.server.elasticsearch.http-hosts.0.hostname: elasticsearch1.gotc-dev.broadinstitute.org
+      JAVA_OPTS: -Dclio.server.elasticsearch.http-hosts.0.hostname=elasticsearch1.gotc-dev.broadinstitute.org
     ports:
     - 8080:8080
