--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -11,35 +11,14 @@ group_defaults:
     approve_regex: '^:+1:'
   author_approval:
     ignored: true
+  teams:
+    - dsde-pipelines-developers
 
 groups:
   develop-reviewers:
-    required: 1
-    teams:
-      - dsde-pipelines-developers
+    required: 2
     conditions:
       branches:
         - develop
-
-  staging-reviewers:
-    required: 2
-    teams:
-      - dsde-pipelines-developers
-    conditions:
-      branches:
-        - staging
-    reset_on_push:
-      enabled: true
-
-  prod-reviewers:
-    required: 2
-    # Based on the description of DSDEGP-1420, changes to prod should
-    # only be allowed with the approval of both Jay and KT.
-    users:
-      - jacarey
-      - ktibbett
-    conditions:
-      branches:
-        - master
-    reset_on_push:
-      enabled: true
+  other-branch-reviewers:
+    required: 1
