Improve usability of CLP web-client for integration tests.

--- a/clio-client/src/main/resources/reference.conf
+++ b/clio-client/src/main/resources/reference.conf
@@ -11,6 +11,7 @@ clio {
   server {
     hostname = "localhost"
     port = 8080
+    use-https = false
   }
   client {
     response-timeout = 30s
