--- a/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/elasticsearch-compose.yml
+++ b/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/elasticsearch-compose.yml
@@ -2,12 +2,16 @@ version: '2'
 
 services:
   elasticsearch:
-    image: ${ELASTICSEARCH_DOCKER_TAG}
+    image: broadinstitute/elasticsearch:${ELASTICSEARCH_DOCKER_TAG}
     environment:
       cluster.name: docker-cluster
       bootstrap.memory_lock: 'true'
       ES_JAVA_OPTS: -Xms512m -Xmx512m
       xpack.security.enabled: 'false'
+      path.logs: /usr/share/elasticsearch/logs
+    volumes:
+      - ${CONF_DIR}/elasticsearch-log4j2.properties:/usr/share/elasticsearch/config/log4j2.properties
+      - ${CONF_DIR}/elasticsearch-healthcheck.sh:/usr/share/elasticsearch/bin/healthcheck.sh
     ulimits:
       memlock:
         soft: -1
