--- a/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/docker-compose-dev-elasticsearch.yml
+++ b/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/docker-compose-dev-elasticsearch.yml
@@ -2,10 +2,12 @@ version: '2'
 
 # Compose configuration for running Clio against the dev Elasticsearch during integration-testing.
 services:
+  # NOTE: The integration test code relies upon this service being named `clio-server`
+  # If you change this name, you need to update the `DockerIntegrationSpec` to match
   clio-server:
     image: broadinstitute/clio-server:${CLIO_DOCKER_TAG}
     environment:
       JAVA_OPTS: -Dclio.server.elasticsearch.http-hosts.0.hostname=elasticsearch1.gotc-dev.broadinstitute.org  -Dlogback.configurationFile=/app/clio-logback.xml
     volumes:
       - ${CONF_DIR}/clio-logback.xml:/app/clio-logback.xml
-      - ${LOG_DIR}/clio-server:/logs
+      - ${CLIO_LOG_FILE}:/logs/clio.log
