--- a/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/docker-compose.yml
+++ b/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 
 # Compose configuration for running both Clio and Elasticsearch locally for integration-testing.
 services:
+  # NOTE: The integration test code relies upon this service being named `clio-server`
+  # If you change this name, you need to update the `DockerIntegrationSpec` to match
   clio-server:
     image: broadinstitute/clio-server:${CLIO_DOCKER_TAG}
     environment:
@@ -10,8 +12,10 @@ services:
       - clio-network
     volumes:
       - ${CONF_DIR}/clio-logback.xml:/app/clio-logback.xml
-      - ${LOG_DIR}/clio-server:/logs
+      - ${CLIO_LOG_FILE}:/logs/clio.log
 
+  # NOTE: The integration test code relies upon this service being named `elasticsearch1`
+  # If you change this name, you also need to update the `FullDockerIntegrationSpec`
   elasticsearch1:
     extends:
       file: elasticsearch-compose.yml
