Use config to scale test timeouts.

--- a/clio-server/src/test/resources/application.conf
+++ b/clio-server/src/test/resources/application.conf
@@ -5,3 +5,10 @@ clio.server {
     replicate-indices: false
   }
 }
+
+akka {
+  test {
+    # Scale default timeouts by 3 to avoid intermittent errors in Jenkins
+    timefactor = 3.0
+  }
+}
