--- a/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/docker-compose.yml
+++ b/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/docker-compose.yml
@@ -5,14 +5,11 @@ services:
   # NOTE: The integration test code relies upon this service being named `clio-server`
   # If you change this name, you need to update the `DockerIntegrationSpec` to match
   clio-server:
-    image: broadinstitute/clio-server:${CLIO_DOCKER_TAG}
-    environment:
-      JAVA_OPTS: -Dclio.server.elasticsearch.http-hosts.0.hostname=elasticsearch1 -Dlogback.configurationFile=/app/clio-logback.xml
+    extends:
+      file: clio-compose.yml
+      service: clio-server
     networks:
       - clio-network
-    volumes:
-      - ${CONF_DIR}/clio-logback.xml:/app/clio-logback.xml
-      - ${CLIO_LOG_FILE}:/logs/clio.log
 
   # NOTE: The integration test code relies upon this service being named `elasticsearch1`
   # If you change this name, you also need to update the `FullDockerIntegrationSpec`
