--- a/clio-server/src/main/resources/reference.conf
+++ b/clio-server/src/main/resources/reference.conf
@@ -8,12 +8,14 @@
 include "clio-server-version"
 
 clio.server {
-  environment: dev
-
   http-server {
     interface: 0.0.0.0
     port: 8080
     shutdown-timeout: 60s
+  }
+
+  persistence {
+    service-account-json: null
   }
 
   elasticsearch {
