Client tests pass

--- a/clio-client/src/main/resources/reference.conf
+++ b/clio-client/src/main/resources/reference.conf
@@ -16,6 +16,9 @@ clio {
   client {
     response-timeout = 30s
   }
+  greenteam {
+    email = "greenteam@broadinstitute.org"
+  }
 }
 
 akka.http {
