DSDEGP-1500 DSDEGP-1501 Clio writes metadata updates to storage.

--- a/clio-server/src/main/resources/reference.conf
+++ b/clio-server/src/main/resources/reference.conf
@@ -14,8 +14,23 @@ clio.server {
     shutdown-timeout: 60s
   }
 
+  # To persist metadata to cloud storage instead of local disk, put:
+  #
+  # clio.server.persistence {
+  #   type: gcs
+  #   project-id: some-project-id
+  #   bucket: some-bucket-name
+  #   service-account-json: /path/to/service/account/secrets.json
+  # }
+  #
+  # into application.conf.
   persistence {
-    service-account-json: null
+    type: local
+
+    # Set the LOCAL_PERSISTENCE_DIR environment variable to
+    # specify the root path to which Clio will write metadata
+    # updates. If not given, a temp directory will be used.
+    root-dir: ${?LOCAL_PERSISTENCE_DIR}
   }
 
   elasticsearch {
