Cleanups from review, with more comments.

--- a/clio-server/src/main/resources/reference.conf
+++ b/clio-server/src/main/resources/reference.conf
@@ -25,7 +25,7 @@ clio.server {
   #
   # into application.conf.
   persistence {
-    type: local
+    type: OnPrem
 
     # Set the LOCAL_PERSISTENCE_DIR environment variable to
     # specify the root path to which Clio will write metadata
