Pass 2 of review response.

--- a/clio-server/src/main/resources/reference.conf
+++ b/clio-server/src/main/resources/reference.conf
@@ -27,10 +27,10 @@ clio.server {
   persistence {
     type: OnPrem
 
-    # Set the LOCAL_PERSISTENCE_DIR environment variable to
-    # specify the root path to which Clio will write metadata
-    # updates. If not given, a temp directory will be used.
-    root-dir: ${?LOCAL_PERSISTENCE_DIR}
+    # Set this variable to specify the local path to which Clio will
+    # write metadata updates as a "source of truth".
+    # If left null, a temp directory will be used.
+    root-dir: null
   }
 
   elasticsearch {
