Tl dsdegp 1237 push to cloud clio (#103)
* Made bearer-token optional and made clio-client generate one if not provided

--- a/clio-client/src/main/resources/reference.conf
+++ b/clio-client/src/main/resources/reference.conf
@@ -15,9 +15,10 @@ clio {
   }
   client {
     response-timeout = 30s
-  }
-  greenteam {
-    email = "greenteam@broadinstitute.org"
+    service-account-json = null
+    greenteam {
+      email = "greenteam@broadinstitute.org"
+    }
   }
 }
 
