DSDEGP-1669 Add configurable request throttling to the clio-client.

--- a/clio-client/src/main/resources/reference.conf
+++ b/clio-client/src/main/resources/reference.conf
@@ -14,6 +14,8 @@ clio {
     use-https = false
   }
   client {
+    max-queued-requests = 100
+    max-concurrent-requests = 8
     response-timeout = 30s
     service-account-json = null
     greenteam {
