DSDEGP-1801 Add retries to clio-client.

--- a/clio-client/src/main/resources/reference.conf
+++ b/clio-client/src/main/resources/reference.conf
@@ -17,6 +17,7 @@ clio {
     max-queued-requests = 100
     max-concurrent-requests = 8
     response-timeout = 30s
+    max-request-retries = 5
     service-account-json = null
     greenteam {
       email = "greenteam@broadinstitute.org"
