--- a/clio-client/src/main/resources/reference.conf
+++ b/clio-client/src/main/resources/reference.conf
@@ -19,6 +19,7 @@ clio {
     response-timeout = 30s
     max-request-retries = 5
     service-account-json = null
+    access-token = null
     greenteam {
       email = "greenteam@broadinstitute.org"
     }
