DSDEGP-2068 Expose parameter for controlling parallelism in recovery.

--- a/clio-server/src/main/resources/reference.conf
+++ b/clio-server/src/main/resources/reference.conf
@@ -21,6 +21,7 @@ clio.server {
   #   project-id: some-project-id
   #   bucket: some-bucket-name
   #   service-account-json: /path/to/service/account/secrets.json
+  #   recovery-parallelism: 8
   # }
   #
   # into application.conf.
@@ -31,6 +32,10 @@ clio.server {
     # write metadata updates as a "source of truth".
     # If left null, a temp directory will be used.
     root-dir: null
+
+    # Override this val to increase the number of paths which will be
+    # concurrently read from storage during document recovery.
+    recovery-parallelism: 1
   }
 
   elasticsearch {
