DSDEGP-2059 Set ServerName to real hostname, and ServerAlias to DNS.

--- a/clio-server/config/site.conf
+++ b/clio-server/config/site.conf
@@ -14,6 +14,7 @@ ProxyTimeout ${PROXY_TIMEOUT}
 LDAPCacheTTL ${LDAP_CACHE_TTL}
 
 <VirtualHost _default_:${HTTPD_PORT}>
+ServerAlias ${SERVER_ALIAS}
 ErrorLog /dev/stdout
 CustomLog "/dev/stdout" combined
 Redirect 307 / https://${SERVER_NAME}/
@@ -21,6 +22,7 @@ Redirect 307 / https://${SERVER_NAME}/
 
 <VirtualHost _default_:${SSL_HTTPD_PORT}>
 
+ServerAlias ${SERVER_ALIAS}
 DocumentRoot /app
 
 <Directory "/app">
