Add hook to allow umask to be set for clio docker. This allows us to control the permissions of all the files that clio creates.
Use 0000 umask for integration test so that data can be cleaned up properly.

--- a/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/clio-compose.yml
+++ b/clio-integration-test/src/it/resources/org/broadinstitute/clio/integrationtest/clio-compose.yml
@@ -12,6 +12,7 @@ services:
         -Dclio.server.elasticsearch.http-hosts.0.hostname=${ELASTICSEARCH_HOST}
         -Dlogback.configurationFile=/app/clio-logback.xml
         -Dclio.server.persistence.root-dir=/persistence
+      UMASK: ${UMASK}
     volumes:
       - ${CONF_DIR}/clio-logback.xml:/app/clio-logback.xml
       - ${CLIO_LOG_FILE}:/logs/clio.log
