--- a/clio-client/src/main/resources/reference.conf
+++ b/clio-client/src/main/resources/reference.conf
@@ -15,6 +15,7 @@ clio {
   }
   client {
     response-timeout = 30s
+    idle-timeout = 60s
     max-request-retries = 5
     service-account-json = null
   }
