allow url encoded slashes

--- a/clio-server/config/site.conf
+++ b/clio-server/config/site.conf
@@ -26,6 +26,7 @@ ServerAlias ${SERVER_ALIAS}
 DocumentRoot /app
 
 <Directory "/app">
+AllowEncodedSlashes On
 AllowOverride All
 Options -Indexes
 
