--- a/clio-server/config/site.conf
+++ b/clio-server/config/site.conf
@@ -25,8 +25,8 @@ Redirect 307 / https://${SERVER_NAME}/
 ServerAlias ${SERVER_ALIAS}
 DocumentRoot /app
 
+AllowEncodedSlashes NoDecode
 <Directory "/app">
-AllowEncodedSlashes On
 AllowOverride All
 Options -Indexes
 
