--- a/clio-server/config/site.conf
+++ b/clio-server/config/site.conf
@@ -25,6 +25,7 @@ Redirect 307 / https://${SERVER_NAME}/
 ServerAlias ${SERVER_ALIAS}
 DocumentRoot /app
 
+AllowEncodedSlashes NoDecode
 <Directory "/app">
 AllowOverride All
 Options -Indexes
